stock-agg-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: stock-aggregator-dep
  name: stock-aggregator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-aggregator-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: stock-aggregator-dep
    spec:
      containers:
      - image: abhibroto0402/stock-aggregator:latest
        name: stock-aggregator
        ports:
        - containerPort: 8080
        resources: {}
status: {}
