stock-agg-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-agg-lb
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: stock-aggregator-dep
  type: LoadBalancer
status:
  loadBalancer: {}
