stock-agg-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-agg-internal-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: stock-aggregator-dep
