stock-agg-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-agg-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /stock-aggregate
            pathType: Prefix
            backend:
              service:
                name: stock-agg-internal-svc
                port:
                  number: 8080
